--- a/Vssoft.Data/Vssoft.Data.csproj
+++ b/Vssoft.Data/Vssoft.Data.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Core\Ado\EmployeeProvider.cs" />
     <Compile Include="Core\Ado\EthnicProvider.cs" />
     <Compile Include="Core\Ado\ObjectProvider.cs" />
+    <Compile Include="Core\Ado\PatientObjectProvider.cs" />
     <Compile Include="Core\Ado\ProviderBase.cs" />
     <Compile Include="Core\Ado\SpecialtyProvider.cs" />
     <Compile Include="Core\BangKeReportProvider.cs" />
