--- a/Vssoft.Dictionary/Vssoft.Dictionary.csproj
+++ b/Vssoft.Dictionary/Vssoft.Dictionary.csproj
@@ -76,7 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IFormMain.cs" />
-    <Compile Include="UI\Core\Actions\ucAddDepartment.cs">
+    <Compile Include="UI\Core\Actions\ucAddDIC_PHONGBAN.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UI\Core\Actions\ucAddDIC_BENHVIEN.cs">
@@ -125,29 +125,29 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
-    <Compile Include="UI\Core\Actions\ucAddEthnic.cs">
+    <Compile Include="UI\Core\Actions\ucAddDIC_DANTOC.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Core\Actions\ucAddEthnic.Designer.cs">
-      <DependentUpon>ucAddEthnic.cs</DependentUpon>
+    <Compile Include="UI\Core\Actions\ucAddDIC_DANTOC.Designer.cs">
+      <DependentUpon>ucAddDIC_DANTOC.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Core\Actions\ucAddSpecialty.cs">
+    <Compile Include="UI\Core\Actions\ucAddDIC_CHUYENKHOA.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Core\Actions\ucAdd_Doituong.cs">
+    <Compile Include="UI\Core\Actions\ucAddDIC_DOITUONGBAOHIEM.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Core\ucCanBo.cs">
+    <Compile Include="UI\Core\ucDIC_CANBO.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Core\ucCanBo.Designer.cs">
-      <DependentUpon>ucCanBo.cs</DependentUpon>
+    <Compile Include="UI\Core\ucDIC_CANBO.Designer.cs">
+      <DependentUpon>ucDIC_CANBO.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Core\ucDanToc.cs">
+    <Compile Include="UI\Core\ucDIC_DANTOC.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Core\ucDanToc.Designer.cs">
-      <DependentUpon>ucDanToc.cs</DependentUpon>
+    <Compile Include="UI\Core\ucDIC_DANTOC.Designer.cs">
+      <DependentUpon>ucDIC_DANTOC.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Core\ucDIC_BENHVIEN.cs">
       <SubType>UserControl</SubType>
@@ -155,10 +155,10 @@
     <Compile Include="UI\Core\ucDIC_BENHVIEN.Designer.cs">
       <DependentUpon>ucDIC_BENHVIEN.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Core\ucDIC_Department.cs">
+    <Compile Include="UI\Core\ucDIC_PHONGBAN.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Core\ucDIC_DoiTuong.cs">
+    <Compile Include="UI\Core\ucDIC_DOITUONGBAOHIEM.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UI\Core\ucDIC_DTBN.cs">
@@ -173,11 +173,11 @@
     <Compile Include="UI\Core\ucDIC_HUYEN.Designer.cs">
       <DependentUpon>ucDIC_HUYEN.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Core\ucDIC_Specialty.cs">
+    <Compile Include="UI\Core\ucDIC_CHUYENKHOA.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Core\ucDIC_Specialty.Designer.cs">
-      <DependentUpon>ucDIC_Specialty.cs</DependentUpon>
+    <Compile Include="UI\Core\ucDIC_CHUYENKHOA.Designer.cs">
+      <DependentUpon>ucDIC_CHUYENKHOA.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Core\ucDIC_TINHTHANH.cs">
       <SubType>UserControl</SubType>
@@ -196,12 +196,6 @@
     </Compile>
     <Compile Include="UI\UserControls\CLS.designer.cs">
       <DependentUpon>CLS.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\UserControls\dmDoiTuongcs.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UI\UserControls\dmDoiTuongcs.designer.cs">
-      <DependentUpon>dmDoiTuongcs.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\frmCapDo.cs">
       <SubType>Form</SubType>
@@ -227,18 +221,6 @@
     <Compile Include="UI\frm_DM5084.designer.cs">
       <DependentUpon>frm_DM5084.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\frm_DmDTBN.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\frm_DmDTBN.designer.cs">
-      <DependentUpon>frm_DmDTBN.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Frm_DmHuyen.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\Frm_DmHuyen.designer.cs">
-      <DependentUpon>Frm_DmHuyen.cs</DependentUpon>
-    </Compile>
     <Compile Include="UI\frm_DmSoBL.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -256,24 +238,6 @@
     </Compile>
     <Compile Include="UI\Frm_DmTinh.designer.cs">
       <DependentUpon>Frm_DmTinh.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Frm_DmXa.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\Frm_DmXa.designer.cs">
-      <DependentUpon>Frm_DmXa.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Frm_Dm_BenhVien.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\Frm_Dm_BenhVien.designer.cs">
-      <DependentUpon>Frm_Dm_BenhVien.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Frm_Dm_ChuyenKhoa.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\Frm_Dm_ChuyenKhoa.designer.cs">
-      <DependentUpon>Frm_Dm_ChuyenKhoa.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\frm_DsMaDV.cs">
       <SubType>Form</SubType>
@@ -335,18 +299,6 @@
     <Compile Include="UI\UserControls\usDSKhoaPhong.designer.cs">
       <DependentUpon>usDSKhoaPhong.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\UserControls\us_DmBenhVien.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UI\UserControls\us_DmBenhVien.designer.cs">
-      <DependentUpon>us_DmBenhVien.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\UserControls\us_dmDanToc.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UI\UserControls\us_dmDanToc.designer.cs">
-      <DependentUpon>us_dmDanToc.cs</DependentUpon>
-    </Compile>
     <Compile Include="UI\UserControls\us_DmDichVuCLS.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -358,12 +310,6 @@
     </Compile>
     <Compile Include="UI\UserControls\us_dmDuoc.designer.cs">
       <DependentUpon>us_dmDuoc.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\UserControls\us_DmHuyen.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UI\UserControls\us_DmHuyen.designer.cs">
-      <DependentUpon>us_DmHuyen.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\UserControls\us_dmICD10.cs">
       <SubType>UserControl</SubType>
@@ -395,18 +341,6 @@
     <Compile Include="UI\UserControls\us_dmTieuNhomDV.designer.cs">
       <DependentUpon>us_dmTieuNhomDV.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\UserControls\us_DmTinh.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UI\UserControls\us_DmTinh.designer.cs">
-      <DependentUpon>us_DmTinh.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\UserControls\us_DmXa.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UI\UserControls\us_DmXa.designer.cs">
-      <DependentUpon>us_DmXa.cs</DependentUpon>
-    </Compile>
     <Compile Include="xfmDictionary.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -427,8 +361,8 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\licenses.licx" />
-    <EmbeddedResource Include="UI\Core\Actions\ucAddDepartment.resx">
-      <DependentUpon>ucAddDepartment.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Core\Actions\ucAddDIC_PHONGBAN.resx">
+      <DependentUpon>ucAddDIC_PHONGBAN.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Core\Actions\ucAddDIC_BENHVIEN.resx">
       <DependentUpon>ucAddDIC_BENHVIEN.cs</DependentUpon>
@@ -455,20 +389,20 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Core\Actions\ucAddEthnic.resx">
-      <DependentUpon>ucAddEthnic.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Core\Actions\ucAddDIC_DANTOC.resx">
+      <DependentUpon>ucAddDIC_DANTOC.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Core\Actions\ucAddSpecialty.resx">
-      <DependentUpon>ucAddSpecialty.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Core\Actions\ucAddDIC_CHUYENKHOA.resx">
+      <DependentUpon>ucAddDIC_CHUYENKHOA.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Core\Actions\ucAdd_Doituong.resx">
-      <DependentUpon>ucAdd_Doituong.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Core\Actions\ucAddDIC_DOITUONGBAOHIEM.resx">
+      <DependentUpon>ucAddDIC_DOITUONGBAOHIEM.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Core\ucCanBo.resx">
-      <DependentUpon>ucCanBo.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Core\ucDIC_CANBO.resx">
+      <DependentUpon>ucDIC_CANBO.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Core\ucDanToc.resx">
-      <DependentUpon>ucDanToc.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Core\ucDIC_DANTOC.resx">
+      <DependentUpon>ucDIC_DANTOC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Core\ucDIC_BENHVIEN.resx">
       <DependentUpon>ucDIC_BENHVIEN.cs</DependentUpon>
@@ -485,9 +419,6 @@
     <EmbeddedResource Include="UI\UserControls\CLS.resx">
       <DependentUpon>CLS.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\UserControls\dmDoiTuongcs.resx">
-      <DependentUpon>dmDoiTuongcs.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UI\frmCapDo.resx">
       <DependentUpon>frmCapDo.cs</DependentUpon>
     </EmbeddedResource>
@@ -500,12 +431,6 @@
     <EmbeddedResource Include="UI\frm_DM5084.resx">
       <DependentUpon>frm_DM5084.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\frm_DmDTBN.resx">
-      <DependentUpon>frm_DmDTBN.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\Frm_DmHuyen.resx">
-      <DependentUpon>Frm_DmHuyen.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UI\frm_DmSoBL.resx">
       <DependentUpon>frm_DmSoBL.cs</DependentUpon>
     </EmbeddedResource>
@@ -514,15 +439,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Frm_DmTinh.resx">
       <DependentUpon>Frm_DmTinh.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\Frm_DmXa.resx">
-      <DependentUpon>Frm_DmXa.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\Frm_Dm_BenhVien.resx">
-      <DependentUpon>Frm_Dm_BenhVien.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\Frm_Dm_ChuyenKhoa.resx">
-      <DependentUpon>Frm_Dm_ChuyenKhoa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frm_DsMaDV.resx">
       <DependentUpon>frm_DsMaDV.cs</DependentUpon>
@@ -554,20 +470,11 @@
     <EmbeddedResource Include="UI\UserControls\usDSKhoaPhong.resx">
       <DependentUpon>usDSKhoaPhong.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\UserControls\us_DmBenhVien.resx">
-      <DependentUpon>us_DmBenhVien.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\UserControls\us_dmDanToc.resx">
-      <DependentUpon>us_dmDanToc.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UI\UserControls\us_DmDichVuCLS.resx">
       <DependentUpon>us_DmDichVuCLS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\UserControls\us_dmDuoc.resx">
       <DependentUpon>us_dmDuoc.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\UserControls\us_DmHuyen.resx">
-      <DependentUpon>us_DmHuyen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\UserControls\us_dmICD10.resx">
       <DependentUpon>us_dmICD10.cs</DependentUpon>
@@ -583,12 +490,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\UserControls\us_dmTieuNhomDV.resx">
       <DependentUpon>us_dmTieuNhomDV.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\UserControls\us_DmTinh.resx">
-      <DependentUpon>us_DmTinh.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\UserControls\us_DmXa.resx">
-      <DependentUpon>us_DmXa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="xfmDictionary.resx">
       <DependentUpon>xfmDictionary.cs</DependentUpon>
