--- a/Vssoft.Dictionary/Vssoft.Dictionary.csproj
+++ b/Vssoft.Dictionary/Vssoft.Dictionary.csproj
@@ -97,6 +97,12 @@
     <Compile Include="UI\Core\Actions\frmAddDIC_DICHVU.Designer.cs">
       <DependentUpon>frmAddDIC_DICHVU.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Core\Actions\frmAddDIC_DUOC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Core\Actions\frmAddDIC_DUOC.Designer.cs">
+      <DependentUpon>frmAddDIC_DUOC.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Core\Actions\ucAddDIC_DICHVU.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -191,6 +197,12 @@
     <Compile Include="UI\Core\Actions\ucAddDIC_DOITUONGBAOHIEM.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="UI\Core\Actions\xucAddDIC_DUOC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\Core\Actions\xucAddDIC_DUOC.Designer.cs">
+      <DependentUpon>xucAddDIC_DUOC.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Core\ucDIC_CANBO.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -211,6 +223,12 @@
     </Compile>
     <Compile Include="UI\Core\ucDIC_DICHVU.cs">
       <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\Core\ucDIC_DUOC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\Core\ucDIC_DUOC.Designer.cs">
+      <DependentUpon>ucDIC_DUOC.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Core\ucDIC_ICD10.cs">
       <SubType>UserControl</SubType>
@@ -412,8 +430,14 @@
       <DependentUpon>frmDictionary.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
+    <EmbeddedResource Include="UI\Base\frmAddBase.resx">
+      <DependentUpon>frmAddBase.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Core\Actions\frmAddDIC_DICHVU.resx">
       <DependentUpon>frmAddDIC_DICHVU.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Core\Actions\frmAddDIC_DUOC.resx">
+      <DependentUpon>frmAddDIC_DUOC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Core\Actions\ucAddDIC_DICHVU.resx">
       <DependentUpon>ucAddDIC_DICHVU.cs</DependentUpon>
@@ -470,6 +494,9 @@
     <EmbeddedResource Include="UI\Core\Actions\ucAddDIC_DOITUONGBAOHIEM.resx">
       <DependentUpon>ucAddDIC_DOITUONGBAOHIEM.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Core\Actions\xucAddDIC_DUOC.resx">
+      <DependentUpon>xucAddDIC_DUOC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Core\ucDIC_CANBO.resx">
       <DependentUpon>ucDIC_CANBO.cs</DependentUpon>
     </EmbeddedResource>
@@ -484,6 +511,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Core\ucDIC_DTBN.resx">
       <DependentUpon>ucDIC_DTBN.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Core\ucDIC_DUOC.resx">
+      <DependentUpon>ucDIC_DUOC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Core\ucDIC_HUYEN.resx">
       <DependentUpon>ucDIC_HUYEN.cs</DependentUpon>
